--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
     <script>
 
 
-        SimpleMDE.prototype.markdown = mymarkdown;
-        SimpleMDE.prototype.createSideBySide = mysidebyside;
+        // SimpleMDE.prototype.markdown = mymarkdown;
+        // SimpleMDE.prototype.createSideBySide = mysidebyside;
 
-        var editor = new SimpleMDE({
+
+        var editor = new SimpleMDE_SUB({
             element: document.getElementById('editor'),
             spellChecker: false
         });
