toggle scroll sync

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             flex: 1;
         }
     </style>
-    <script src="./node_modules/simplemde/dist/simplemde.min.js"></script>
+    <script src="simpleMDE.js"></script>
     <script src="render.js"></script>
 </head>
 <body ondrop="dropHandler(event);">
